# game-of-life

./: CMakeLists.txt  README.md  game-of-life.bak  game-of-life.cpp  start_state.txt
assets/: start_state.txt
include/: globals.h  grid.h  renderer.h
old/: game-of-life.cpp
src/: globals.cpp  grid.cpp  main.cpp  renderer.cpp
